--- a/index.html
+++ b/index.html
@@ -27,33 +27,37 @@
   </header>
 
   <div id="hero">
+
     <h1>Let's build something amazing together</h1>
   </div>
 
   <main>
     <section id="about-me">
-      <div>
-        <div>
-          <h2>About Me.</h2>
-          <p>I'm a seasoned graphic designer with a penchant for bringing brands to life through captivating visuals and
-            immersive digital experiences. With a background rooted in both creativity and strategy, I've spent years
-            honing my craft to deliver designs that not only look stunning but also drive real results.</p>
-          <p>Specializing in brand identity and web design, I thrive on the challenge of distilling complex ideas into
-            simple yet impactful visual elements. </p>
-          <p>With a commitment to excellence and a passion for pushing the boundaries of design, I'm dedicated to
-            helping brands stand out in an increasingly crowded digital landscape. Let's work together to bring your
-            vision to life!</p>
-        </div>
+      <div class="wrapper">
 
-        <img src="images/bio-pic.jpg" alt="Emily standing with arms crossed looking up to the left">
+        <h2>About Me.</h2>
+        <p>I'm a seasoned graphic designer with a penchant for bringing brands to life through captivating visuals
+          and
+          immersive digital experiences. With a background rooted in both creativity and strategy, I've spent
+          years
+          honing my craft to deliver designs that not only look stunning but also drive real results.</p>
+        <p>Specializing in brand identity and web design, I thrive on the challenge of distilling complex ideas
+          into
+          simple yet impactful visual elements. </p>
+        <p>With a commitment to excellence and a passion for pushing the boundaries of design, I'm dedicated to
+          helping brands stand out in an increasingly crowded digital landscape. Let's work together to bring your
+          vision to life!</p>
       </div>
+
+      <img src="images/bio-pic.jpg" alt="Emily standing with arms crossed looking up to the left">
+
     </section>
 
     <section id="services">
-      <div>
+      <div class="wrapper">
         <h2>What I can do for you...</h2>
 
-        <div>
+        <div class="grid">
           <article>
             <h3>Logo Creation</h3>
             <p>Your logo is the face of your brand and the first thing that potential customers will see, so it's
@@ -64,7 +68,8 @@
 
           <article>
             <h3>Web Design</h3>
-            <p>Your website is often the first interaction customers have with your business, so it's important to make
+            <p>Your website is often the first interaction customers have with your business, so it's important to
+              make
               a strong first impression. I can help you create a website that not only looks great but also functions
               flawlessly and engages your target audience.</p>
             <a class="btn" href="#" aria-label="Learn more about web design services">Learn more</a>
@@ -72,7 +77,8 @@
 
           <article>
             <h3>Full Branding</h3>
-            <p>Your brand is much more than just a logo or a website. It's the overall image that your business presents
+            <p>Your brand is much more than just a logo or a website. It's the overall image that your business
+              presents
               to the world, including the look, feel, and voice of your brand. I can help you create a cohesive and
               impactful brand that resonates with your target audience and sets you apart from your competitors.</p>
             <a class="btn" href="#" aria-label="Learn more about full branding services">Learn more</a>
@@ -82,12 +88,12 @@
     </section>
 
     <section id="work">
-      <div>
+      <div class="wrapper">
         <h2>My Work</h2>
         <p>I believe that life is all about balance, and finding inspiration in the world around us is key to staying
           creative and motivated. In addition to my portfolio of design work, here are a few of my latest pieces.</p>
 
-        <div>
+        <div class="image">
           <img src="images/portfolio-piece-1.jpg" alt="">
           <img src="images/portfolio-piece-2.jpg" alt="">
           <img src="images/portfolio-piece-3.jpg" alt="">
